# ambiguity_paper

./: LICENSE  README.md  pyproject.toml
cpp/: CMakeLists.txt  amb_pdf.cpp  amb_pdf.hpp  bindings.cpp
main/: estimator_example.py  posterior_examples.py
notebooks/: estimation.ipynb  inference-analytical.ipynb  inference.ipynb
seldon/ambiguity/: new_ambiguity.py  old_ambiguity.py
seldon/ambiguity/estimator/: __init__.py  new_ambiguity.py  old_ambiguity.py
seldon/ambiguity/posterior/: __init__.py  new_ambiguity.py  old_ambiguity.py
seldon/estimator/: __init__.py  estimator.py
seldon/inference/: __init__.py  bayesian_inference.py
seldon/utils/: __init__.py  binning.py  sampling.py
