[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "pybind11>=2.13.1",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "seldon"
version = "0.1.0"
description = "Ambiguity measures for discrete label distributions and inference tools"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn"
]

[project.optional-dependencies]
dev = ["notebook", "ipykernel"]
viz = ["matplotlib", "seaborn"]

[tool.scikit-build]
wheel.packages = ["seldon"]
build-dir = "build"
build.verbose = true


[tool.scikit-build.cmake]
source-dir = "cpp"
minimum-version = "3.14"
build-type = "Release"